--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@types/react-native": "^0.67.3",
     "react": "17.0.2",
-    "react-native": "0.67.4"
+    "react-native": "0.67.4",
+    "react-native-safe-area-context": "^4.2.1",
+    "react-native-screens": "^3.13.1",
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -21,6 +27,7 @@
     "eslint": "^8.11.0",
     "jest": "^27.5.1",
     "metro-react-native-babel-preset": "^0.69.1",
+    "prettier": "2.6.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
